Added UI functionality

--- a/src/golive.css
+++ b/src/golive.css
@@ -1,4 +1,4 @@
-.App {
+.goLive {
   text-align: center;
 }
 
@@ -24,14 +24,14 @@
   }
 }
 
-.App-header {
+.Live-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 20px;
   color: white;
 }
 
@@ -52,5 +52,9 @@
   height:300px;
 }
 .new_message{
+
+}
+
+.button {
 
 }
