--- a/src/golive.css
+++ b/src/golive.css
@@ -7,13 +7,14 @@
 }
 
 .App-camera {
-  width: 296px;
-  height: 222px;
+  margin-left: 10px;
+  width: 360px;
+  height: 240px;
   border: 1px solid black;
 }
 .App-video {
-  width: 1280px;
-  height: 720px;
+  width: 720px;
+  height: 480px;
   border: 1px solid black;
 }
 
@@ -30,13 +31,14 @@
 
 .Live-header {
   background-color: #FFFFFF;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  color: white;
+  font-weight: bold;
+  color: rgb(3, 2, 2);
 }
 
 .App-link {
@@ -53,7 +55,8 @@
 }
 
 .chat_window {
-  height:460px;
+  margin-left: 10px;
+  height:250px;
 }
 .new_message{
 
@@ -62,3 +65,7 @@
 .button {
 
 }
+
+
+
+
