--- a/src/pages/golive.css
+++ b/src/pages/golive.css
@@ -10,6 +10,65 @@
   text-align: left;
 }
 
+.mic-mute-button{
+  display: inline-block;
+  width:80px;
+  height:80px;
+  border-radius: 47px 47px 47px 47px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  transition: all 0.175s linear;
+  border: none;
+  outline: none;
+  color: #FFFFFF;
+  background-color: #FFFFFF ;
+}
+.mic-mute-button:focus{
+  border: none;
+  outline: none;
+}
+.mic-mute-button:hover{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.button-table{
+  border-collapse: separate;
+  border-spacing: 6px;
+}
+.buffer{
+  padding: 100px;
+}
+
+.go-live{
+  background-color: #4CAF50; 
+  height:80px;
+  width: 160px;
+  border-radius: 15px;
+  transition: all 0.175s linear;
+}
+.go-live:hover:enabled{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.go-stream:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+  box-shadow: 0 ;
+}
+.stop-stream{
+  background-color: #f44336;
+  height:80px;
+  width: 160px;
+  border-radius: 15px;
+  transition: all 0.175s linear;
+}
+.stop-stream:hover:enabled{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.stop-stream:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+  box-shadow: 0 ;
+}
 .App-camera {
   margin-left: 10px;
   width: 360px;
@@ -60,7 +119,8 @@
 
 .chat_window {
   margin-left: 10px;
-  height:250px;
+  height:180px;
+  width: 360px;
 }
 .new_message{
 
