--- a/src/css/kf.css
+++ b/src/css/kf.css
@@ -25,10 +25,11 @@ Version: 1.0
      min-height: 100%;
 }
  body {
-     background-color: #fafafa;
+     background-color: #fafafa !important;
      color: #888;
      font-size: 13px;
      height: 100%;
+	 margin-top: 14px;
 }
  .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6{
 }
@@ -56,6 +57,11 @@ Version: 1.0
 .single-channel-page .container-fluid {
     padding: 30px 30px 30px !important;
 }
+div.dropdown-menu
+{
+	z-index: 1100 !important; /* fix to ensure dropdown shows ontop of new desktop nav */
+}
+
  body.fixed-nav #content-wrapper {
      margin-top: 56px;
      padding-left: 90px;
@@ -160,20 +166,10 @@ Version: 1.0
     }
 }
  .sidebar {
-     width: 90px !important;
-     background: #ff516b;
-    /* Old browsers */
-     background: -moz-linear-gradient(-45deg, red 0%, orange 100%);
-    /* FF3.6-15 */
-     background: -webkit-linear-gradient(-45deg, red 0%, orange 100%);
-    /* Chrome10-25,Safari5.1-6 */
-     background: linear-gradient(135deg, red 0%, orange 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff516b', endColorstr='#826cfd',GradientType=1 );
-    /* IE6-9 fallback on horizontal gradient */
+     width: 200px !important;
      min-height: 100%;
      z-index: 9;
-     padding: 2px 0;
+     padding: 30px 0;
      position: fixed;
 }
  .sidebar .nav-item:last-child {
@@ -699,11 +695,13 @@ Version: 1.0
      margin: 0 0 5px;
 }
  a {
-     color: #ff516b;
+     color: #ff516b !important;
      text-decoration: none !important;
 }
+
+
  .btn {
-     border-radius: 2px;
+     border-radius: 5px;
 }
  .btn-light {
      background: #f8f8f8 none repeat scroll 0 0;
@@ -806,8 +804,9 @@ Version: 1.0
      overflow: hidden;
      position: relative;
 }
- .time {
-     background: #f5234a none repeat scroll 0 0;
+
+.live0 {
+     background: #0000FF none repeat scroll 0 0;
      border-radius: 2px;
      bottom: 5px;
      color: #fff;
@@ -817,8 +816,74 @@ Version: 1.0
      padding: 0 6px;
      position: absolute;
      right: 5px;
+}	
+
+.live1::after
+{
+	content: "Scheduled"
 }
- .video-card:hover .time{
+.live1 {
+     background: #E34234 none repeat scroll 0 0;
+     border-radius: 2px;
+     bottom: 5px;
+     color: #fff;
+     font-size: 11px;
+     font-weight: 500;
+     opacity: 0.7;
+     padding: 0 6px;
+     position: absolute;
+     right: 5px;
+	 
+}
+.live1::after
+{
+	content: "Live"
+}
+
+.live2, .live3 {
+     background: #0000FF none repeat scroll 0 0;
+     border-radius: 2px;
+     bottom: 5px;
+     color: #fff;
+     font-size: 11px;
+     font-weight: 500;
+     opacity: 0.7;
+     padding: 0 6px;
+     position: absolute;
+     right: 5px;
+	 content: "Video"
+}
+.live2::after
+{
+	content: "Video"
+}
+.live3::after
+{
+	content: "Stream Recording"
+}
+
+.live4 {
+     background: #555555 none repeat scroll 0 0;
+     border-radius: 2px;
+     bottom: 5px;
+     color: #fff;
+     font-size: 11px;
+     font-weight: 500;
+     opacity: 0.7;
+     padding: 0 6px;
+     position: absolute;
+     right: 5px;
+	 content: "Cancelled"
+}
+
+.live3::after
+{
+	content: "Cancelled"
+}
+
+
+
+ .video-card:hover .live0, .video-card:hover .live1 * .video-card:hover .live2, .video-card:hover .live3, .video-card:hover .live4{
      opacity: unset;
 }
 .video-card-image img {
@@ -1559,7 +1624,7 @@ Version: 1.0
     border-radius: 50%;
 }
 
-.time-right{
+.live-right{
     float: right
 }
 
@@ -1577,4 +1642,534 @@ Version: 1.0
     max-width: 800px;
     padding: 0 20px;
 
+}
+
+
+
+* a:link, * a:visited
+{
+	text-decoration:none;
+}
+
+html {
+	margin: 0px;
+	padding: 0px;
+	direction: ltr;
+}
+div.header {
+	background-color: #FFFFFF !important;
+}
+body {
+	font-size:14px;
+	line-height: 1.5;
+	margin: 0px auto;
+	padding: 0px;
+	direction: ltr;
+	font-stretch: normal;
+}
+
+iframe
+{
+	border:0px;
+}
+
+a img {
+	border: 0px !important;
+}
+
+h1 {
+	font-size: 28px;
+	font-weight: bold;
+	padding-left: 70px;
+	padding-top: 20px;
+	color: #555555;
+	font-size-adjust: none;
+	font-stretch: normal;
+}
+
+h2 {
+	font-size: 22px;
+	font-weight: bold;
+	padding: 14px 0px 0px;
+	color: #555555;
+	text-decoration: none !important;
+	font-size-adjust: none;
+	font-stretch: normal;
+}
+
+h3 {
+	font-size: 20px;
+	padding-top: 3px !important;
+	padding-bottom: 1px !important;
+	padding-bottom: 3px !important;
+}
+
+h4 {
+	font-size: 20px;
+	padding-top: 3px !important;
+	padding-bottom: 0px !important;
+	margin-bottom: 0px !important;
+}
+
+h5 {
+	font-size: 16px;
+	padding-top: 3px !important;	
+	/*border: 0.5px solid #ff516b;*/
+	border-bottom: 1px solid #5555FF;
+	font-weight: normal;
+	color: #5555FF;
+	width: 100%;
+	display: inline-block;
+	margin-bottom: 4px;
+}
+
+h5.grey
+{
+	font-size: 16px;
+	padding-left: 4px !important;
+	border: 0.5px solid #AAAAAA;
+	border-bottom: 2.5px solid #AAAAAA;
+	font-weight: bold;
+	color: black;
+	width: 100%;
+	display: inline-block;
+	margin-bottom: 4px;
+}
+
+input {
+	border-radius: 5px;
+}
+
+input[type=button],input[type=submit] {
+	background-color: #555555 !important;
+	text-decoration: none;
+	cursor: pointer;
+	color: rgb(255, 255, 255) !important;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	color: #FFFFFF !important;
+}
+
+
+td {
+	vertical-align: top;
+}
+
+
+#page-wrapper {
+	background-color:#FFFFFF;
+	min-width: 440px !important;
+}
+
+#content-all {
+	padding: 15px 20px 15px 2px;
+	min-height: 405px;
+}
+
+#folder-tree
+{
+	padding: 0px 15px 0px;
+	vertical-align: top;
+}
+#header {
+	text-align: left;
+	padding: 15px 0px 15px 0px;
+	width:100%;
+	
+}
+#header-wrapper + div {
+	padding-top: 10px; 
+}
+#navigation, #footer {
+	margin-left: 1px;
+	padding: 0px;
+	font-size: 14px;
+	text-align: left;
+	overflow: hidden;
+	padding-left:12px;
+
+}
+#navigation, .sidebar, #sidebar
+{
+	background: #ff516b;
+		/* Old browsers */
+     background: -moz-linear-gradient(-45deg, #ff516b 0%, #FF8500 100%);
+    /* FF3.6-15 */
+     background: -webkit-linear-gradient(-45deg, #ff516b 0%, #FF8500 100%);
+    /* Chrome10-25,Safari5.1-6 */
+     background: linear-gradient(135deg, #ff516b 0%, #FF8500 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff516b', endColorstr='#FF8500',GradientType=1 );
+    /* IE6-9 fallback on horizontal gradient */
+   
+}
+
+
+#navigation ul {
+	margin: 0px;
+	padding: 0px;
+	font-weight:bold;
+	height:100%;
+}
+
+.sidebar li.nav-item a, .sidebar li.nav-item a:visited {
+     color: white !important;
+     text-decoration: none !important;
+	 
+	 width: 100% !important;
+	 padding-right:50px;
+}
+
+#navigation li {
+	display: inline-block;
+	list-style-type: none;
+	list-style-image: none;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	margin: 16px 5px;
+	/*background-color: none;*/
+	padding: 4px 10px 2px;
+}
+
+#navigation li.element:hover, #navigation li.current, .sidebar li.nav-item:hover {
+	color: #FFFFFF !important;
+	/* Old browsers */
+     background: -moz-linear-gradient(-45deg, #ff516b 0%, #E34234 100%);
+    /* FF3.6-15 */
+     background: -webkit-linear-gradient(-45deg, #ff516b 0%, #E34234 100%);
+    /* Chrome10-25,Safari5.1-6 */
+     background: linear-gradient(135deg, #ff516b 0%, #E34234 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff516b', endColorstr='#E34234',GradientType=1 );
+    /* IE6-9 fallback on horizontal gradient */
+   
+}
+
+
+ {
+     color: white !important;
+	  background-color: #555555 !important;
+     border-color: #dcdfdf !important;
+     text-decoration: none !important;
+	 border-radius: 5px;
+}
+
+
+
+#navigation li.element a, #navigation li.element a {
+	width: 100%;
+	text-decoration: none;
+	display: block;
+	
+}
+
+#content-all a:link, #content-all  a:visited {
+	text-decoration: none !important;
+	color: #ff516b !important;
+}
+
+
+
+#folder-tree a:link, #folder-tree a:visited {
+	background: none !important;
+	color:#555555 !important;
+}
+
+#content-all a:hover, #content-all a:active, #folder-tree a:hover, #folder-tree a:active {
+	text-decoration: none !important;
+	color: #FF8400 !important;
+}
+
+#navigation li.element a:link, #navigation li.element a:visited, #navigation li.element a:hover, #navigation li.element:active {
+	color: #FFFFFF !important;
+}
+
+
+#navigation li.element:hover a:link, #navigation li.element:hover a:visited, #navigation li.element:hover a:hover, #navigation li.element:hover a:active {
+	color: #FFFFFF !important;
+}
+
+#navigation li.current a:link, #navigation li.current a:visited, #navigation li.current a:hover, #navigation li.current:active {
+	color: #FFFFFF !important;
+	/* Old browsers */
+     background: -moz-linear-gradient(-45deg, red 0%, orange 100%);
+    /* FF3.6-15 */
+     background: -webkit-linear-gradient(-45deg, red 0%, orange 100%);
+    /* Chrome10-25,Safari5.1-6 */
+     background: linear-gradient(135deg, red 0%, orange 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff516b', endColorstr='#826cfd',GradientType=1 );
+    /* IE6-9 fallback on horizontal gradient */
+   
+}
+
+#viewer
+{
+	width:100%;
+	height:95%;
+	margin-top:3px;
+}
+
+#openFile, #viewBookmark, #secondaryOpenFile, #secondaryViewBookmark
+{
+	display:none !Important;
+	width:0px !important;
+	height:0px !important;
+}
+
+#overlaybar
+{
+	position:absolute;
+	top:0px;
+	width:100%;
+	background-color: #5555FF;
+	z-index: 2;
+	padding: 3px 0px 3px;
+	color:#FFFFFF;
+}
+
+#overlaybar a:link, #overlaybar a:visited
+{
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	padding: 0px 1px 0px;
+	background-color:#ff516b;
+	color:#FFFFFF;
+} 
+
+#overlaybar a:hover, #overlaybar a:active
+{
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	background-color: #222222;
+	color:#FFFFFF;
+} 
+#overlaybar #overlayinsert
+{
+	float:right;
+}
+#folder-tree .current 
+{
+	font-weight: bold;
+}
+#folder-tree .reverse
+{
+	float:right;
+}
+#web-grid, #web-grid > div {
+	overflow: auto;
+	margin-top: 4px;
+}
+
+#web-grid > div, #web-list > div
+{
+	display: table;
+}
+#web-grid > div > div
+{
+	display: table-row;
+}
+#web-grid > div > div > div
+{
+	display: table-cell;
+	position: relative;
+	width: 200px;
+	height: 90px;	
+}
+
+
+
+#web-grid > div > div > div > a > span, #web-grid > div > div > div > a > span > span
+{
+	display: inline-block;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+}
+
+#web-grid > div > div > div > a > span
+{
+	border: solid 1px #F5F5FF;
+	text-align: bottom;
+	background-color: rgb(255, 255, 255);
+	margin-top: 45px;
+	font-size: 14px !important;
+}
+
+#web-grid > div > div > div > a > span:hover {
+	background-color: #FAFAFF !important;
+	color: #FFFFFF !important;
+}
+
+#web-grid > div > div > div > a > span:hover > span {
+	background-color: #ff516b !important;
+	color: #FFFFFF !important;
+}
+
+#web-grid > div > div > div > a > span:hover > span.inactive {
+	background-color: #555555 !important;
+	color: #FFFFFF !important;
+}
+
+
+
+#web-grid > div > div > div > a > span > span, #web-grid div > div > div > a > span > span {
+	background-color: #E5E5FF !important;
+}
+
+#web-grid > div > div > div > a > span img
+{
+	margin-left:5px;
+	margin-top: 5px;
+}
+
+#web-list > div > div
+{
+	display: table-row;
+	overflow:hidden;
+}
+#web-list > div > div > div
+{
+	display: table-row;
+	width:435px;
+	
+	float:left;
+}
+#web-list > div > div > div > span > span
+{
+	color:#AAAAFF;
+	font-size:80%;
+	padding-left:40px !important;	
+	
+}
+
+/* hack for IE9+; IE8 and lower not supported anyways */
+@media screen and (min-width:0\0) {
+	#web-grid > div > div > div
+	{
+		display: inline-block !important;
+	}
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+	#web-grid > div > div > div
+	{
+		display: inline-block !important;
+	}
+}
+
+/*
+.title {
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	display: inline-block;
+	width: 100%;
+	background-color: rgb(248, 248, 248) !important;
+	color: #555555 !important;
+}*/
+
+#content-all table.listing { /* fix whitespace */
+	width:100%;
+	margin-top:10px;
+}
+	
+#content-all table.listing td { 
+	font-weight:bold;
+}
+#content-all table.listing tr.content td { 
+	font-weight:normal !important;
+}
+
+#content-all table.listing td span.content {
+	display: inline-block;
+	padding-left: 25px;
+	padding-bottom: 12px;
+	font-weight: normal !important;
+} 
+
+@media screen and (max-width:768px) {
+	.reducible {
+		display: none !important;
+	}
+	#content-all {
+		margin-top:15px;
+	}
+}
+
+@media screen and (min-width:768px) {
+	.smallscreen {
+		display: none !important;
+	}
+	#content-all {
+		margin-top:80px;
+	}
+}
+
+@media screen and (max-width:768px) {
+	
+	div#web-list {
+		display: inherit !important;
+	}
+
+	.smallscreen {
+		display: block !important;
+	}
+
+	#web-grid, #folder-tree {
+		display: none !important;
+	}
+
+	.reverse-element, .reverse-wedge {
+		display: none;
+	}
+
+	body #page-title-navigation {
+		font-size: 22px !important;
+	}
+
+	body #everything h4 {
+		font-size: 16px !important;
+	}
+
+	#web-list > div > div > div {
+		display: table-row;
+	}
+}
+
+@media screen and (max-width:768px) {
+	#web-list > div > div > div {
+		display: table-row;
+	}
+
+	#navigation {
+		display: none !important;
+	}
+
+	a {
+		width: inherit !important;
+		overflow: ellipsis !important;
+	}
+
+}
+
+@media screen and (max-width:445px) {
+
+
+	#content-all {
+		overflow: ellipsis;
+	}
+
+	#page-wrapper {
+		/*	margin: auto; */
+		margin-left: 20px !important;
+		margin-right: 20px !important;
+		max-width: 1032px !important;
+		min-width: 440px !important;
+	}
 }
