--- a/src/css/weteach-main.css
+++ b/src/css/weteach-main.css
@@ -839,7 +839,7 @@ div.dropdown-menu
 }
 
 .live0 {
-     background: #0000FF none repeat scroll 0 0;
+     background: #FF8800 none repeat scroll 0 0;
      border-radius: 2px;
      bottom: 5px;
      color: #fff;
@@ -851,7 +851,7 @@ div.dropdown-menu
      right: 5px;
 }	
 
-.live1::after
+.live0::after
 {
 	content: "Scheduled"
 }
