--- a/src/pages/golive.css
+++ b/src/pages/golive.css
@@ -20,14 +20,19 @@
   transition: all 0.175s linear;
   border: none;
   outline: none;
-  color: #FFFFFF;
   background-color: #FFFFFF ;
 }
 .mic-mute-button:focus{
   border: none;
   outline: none;
 }
-.mic-mute-button:hover{
+
+.mic-mute-button:disabled{
+  opacity: 0.6;
+  cursor: not-allowed;
+  box-shadow: 0 ;
+}
+.mic-mute-button:hover:enabled{
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
