--- a/src/css/weteach-main.css
+++ b/src/css/weteach-main.css
@@ -1,24 +1,3 @@
-/*
-Template Name: VIDOE - Video Streaming Website HTML Template
-Author: Askbootstrap
-Author URI: https://themeforest.net/user/askbootstrap
-Version: 1.0
-*/
-/*
-	-- Body 
-	-- Nav
-	-- Sidebar
-	-- Customize Bootstrap
-	-- Category Slider
-	-- Video Card
-	-- Channels Card
-	-- Upload Details
-	-- Watch History
-	-- Single Channel
-    -- Video Page
-    -- My Account
-	-- Footer
-*/
 /* Body */
  html {
      position: relative;
@@ -385,31 +364,31 @@ div.dropdown-menu
     top: 0;
     z-index: 99;
 }
- .osahan-nav {
+ .restyled-nav {
      box-shadow: 0 0 10px #f2f2f2;
      padding: 0;
 }
- .osahan-navbar-search .form-control {
+ .restyled-navbar-search .form-control {
      background: #eceff0 none repeat scroll 0 0;
      border: medium none;
      font-size: 14px;
      max-width: 557px !important;
      width: 557px !important;
 }
- .osahan-navbar-search {
+ .restyled-navbar-search {
      margin-left: 78px !important;
 }
- .osahan-navbar-search .btn {
+ .restyled-navbar-search .btn {
      background: #eceff0 none repeat scroll 0 0;
      border: medium none;
      font-size: 14px;
      padding: 0 18px;
 }
- .osahan-right-navbar .nav-link {
+ .restyled-right-navbar .nav-link {
      padding: 17px 13px !important;
      position: relative;
 }
- .osahan-right-navbar {
+ .restyled-right-navbar {
      margin: 0 7px 0 0;
 }
  .user-dropdown-link img {
@@ -1138,24 +1117,24 @@ div.dropdown-menu
      height: 94px;
      width: 100%;
 }
- .osahan-title {
+ .restyled-title {
      color: #000;
      font-weight: 600;
 }
- .osahan-size {
+ .restyled-size {
      font-size: 11px;
 }
- .osahan-progress .progress {
+ .restyled-progress .progress {
      border-radius: 2px;
      height: 8px;
      margin: 14px 0;
 }
- .osahan-close {
+ .restyled-close {
      position: absolute;
      right: 18px;
      top: 0;
 }
- .osahan-desc {
+ .restyled-desc {
      font-size: 12px;
      opacity: 0.7;
 }
@@ -1352,11 +1331,11 @@ div.dropdown-menu
      footer .text-right {
          text-align: center !important;
     }
-     .osahan-right-navbar .nav-link {
+     .restyled-right-navbar .nav-link {
          font-size: 0;
          padding: 22px 5px !important;
     }
-     .osahan-right-navbar .nav-link .fas {
+     .restyled-right-navbar .nav-link .fas {
          font-size: 12px;
     }
      #sidebarToggle {
@@ -1391,7 +1370,7 @@ div.dropdown-menu
     .imgplace {
         margin-bottom: 15px;
     }
-    .osahan-title {
+    .restyled-title {
         padding: 0 25px 5px 0;
     }
     footer.sticky-footer {
@@ -1457,11 +1436,11 @@ div.dropdown-menu
      footer .text-right {
          text-align: right !important;
     }
-     .osahan-right-navbar .nav-link {
+     .restyled-right-navbar .nav-link {
          font-size: 0;
          padding: 22px 5px !important;
     }
-     .osahan-right-navbar .nav-link .fas {
+     .restyled-right-navbar .nav-link .fas {
          font-size: 12px;
     }
      #sidebarToggle {
@@ -1496,7 +1475,7 @@ div.dropdown-menu
     .imgplace {
         margin-bottom: 15px;
     }
-    .osahan-title {
+    .restyled-title {
         padding: 0 25px 5px 0;
     }
     footer.sticky-footer {
@@ -1535,11 +1514,11 @@ div.dropdown-menu
      .video-card-image img {
          width: 100%;
     }
-     .osahan-right-navbar .nav-link {
+     .restyled-right-navbar .nav-link {
          font-size: 0;
          padding: 22px 5px !important;
     }
-     .osahan-right-navbar .nav-link .fas {
+     .restyled-right-navbar .nav-link .fas {
          font-size: 12px;
     }
      #sidebarToggle {
@@ -1572,16 +1551,16 @@ div.dropdown-menu
      .single-channel-nav .nav-link {
          margin: 0;
     }
-     .osahan-navbar-search .form-control {
+     .restyled-navbar-search .form-control {
          width: auto !important;
     }
-     .osahan-navbar-search {
+     .restyled-navbar-search {
          margin-right: 15px !important;
     }
     .imgplace {
         margin-bottom: 15px;
     }
-    .osahan-title {
+    .restyled-title {
         padding: 0 25px 5px 0;
     }
 }
@@ -1614,11 +1593,11 @@ div.dropdown-menu
      .video-card-image img {
          width: 100%;
     }
-     .osahan-right-navbar .nav-link {
+     .restyled-right-navbar .nav-link {
          font-size: 0;
          padding: 22px 5px !important;
     }
-     .osahan-right-navbar .nav-link .fas {
+     .restyled-right-navbar .nav-link .fas {
          font-size: 12px;
     }
      #sidebarToggle {
@@ -1654,10 +1633,10 @@ div.dropdown-menu
     .single-channel-nav .form-control, .single-channel-nav .btn-outline-success {
         display: none;
     }
-    .osahan-navbar-search .form-control {
+    .restyled-navbar-search .form-control {
          width: auto !important;
     }
-     .osahan-navbar-search {
+     .restyled-navbar-search {
          margin-right: 15px !important;
     }
     .sidebar-toggled .sidebar .channel-sidebar-list {
