--- a/src/css/weteach-main.css
+++ b/src/css/weteach-main.css
@@ -587,6 +587,19 @@ div.dropdown-menu
      border-color: #ff253a;
      color: #ff253a;
 }
+.btn-record{
+    border: 1px !important;
+    background: #ff253a;
+   /* Old browsers */
+   background: -moz-linear-gradient(-45deg, #ffffff 0%, #9ba8aa 100%);
+   /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #ffffff 0%,#9ba8aa 100%);
+   /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, #ffffff 0%,#9ba8aa 100%);
+   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff253a', endColorstr='#ff8453',GradientType=1 );
+   /* IE6-9 fallback on horizontal gradient */
+}
  .text-danger{
      color: #ff253a !important;
 }
